<resources>
    <string name="app_name">ChickenKookKook3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_txt">LOG IN</string>
    <string name="register_txt">REGISTER</string>
    <string name="alert_login_txt">"%s"</string>
    <string name="alert_regis_txt">"%s"</string>
    <string name="header_journal">บันทึกประจำวัน</string>
    <string name="save_bt">บันทึกรายการ</string>
    <string name="look_bt">ดูรายการ</string>
    <string name="logout_menu">LOG OUT</string>
    <string name="about_menu">ABOUT</string>
    <string name="about_bt">ดูข้อมูลบัญชี</string>
    <string name="user_txt">ชื่อผู้ใช้ :" %s"</string>
    <string name="pass_txt">รหัสผ่าน :" %s"</string>
    <string name="back_bt">ย้อนกลับ</string>
    <string name="data_hen_header">ดูบันทึก</string>
    <string name="share_bt">แชร์</string>
    <string name="header_about">ข้อมูลบัญชี</string>
</resources>
